Replace all entries of the beremiz mailing list with OpenPLC forum address

--- a/editor/i18n/Beremiz_bn_BD.po
+++ b/editor/i18n/Beremiz_bn_BD.po
@@ -29,7 +29,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -40,7 +40,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "এই ঠিকানায় অনুগ্রহপূর্বক নথিটি প্রেরণ করুনঃ\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "আপনাকে প্রোগ্রামটি পুনঃআরম্ভ করতে হবে.\n"
 "\n"
@@ -3652,7 +3652,7 @@ msgstr ""
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
