--- a/editor/i18n/Beremiz_de_DE.po
+++ b/editor/i18n/Beremiz_de_DE.po
@@ -31,7 +31,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -42,7 +42,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Bitte schicken Sie die Datei an:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Sie sollten das Programm jetzt neu starten.\n"
 "\n"
@@ -3703,7 +3703,7 @@ msgstr "Temp"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3713,7 +3713,7 @@ msgid ""
 msgstr ""
 "Der beste Ort, um Fragen über Beremiz / PLCOpenEditor\n"
 "zu stellen, ist die Mailingliste des Projekts:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Dies ist der Haupt-Support-Kanal der Community.\n"
 "Um dort Fragen zu stellen, ist es erforderlich,\n"
