--- a/editor/i18n/Beremiz_es_ES.po
+++ b/editor/i18n/Beremiz_es_ES.po
@@ -33,7 +33,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -44,7 +44,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Por favor, si es tan amable, envíe el archivo de error a:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Debe reiniciar el programa.\n"
 "\n"
@@ -3720,7 +3720,7 @@ msgstr "Temporal"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3729,7 +3729,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "El mejor lugar para preguntar sobre Beremiz/PLCOpenEditor es a través de la lista de correos: \n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Este es el canal principal de soporte de la comunidad.\n"
 "Para escribir en ella se requiere estar subscrito a la lista de correos.\n"
