--- a/editor/i18n/Beremiz_fr_FR.po
+++ b/editor/i18n/Beremiz_fr_FR.po
@@ -31,7 +31,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -42,7 +42,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "S'il vous plaît, soyez sympa et envoyez ce fichier à :\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Vous devriez redémarrer le programme.\n"
 "Trace:\n"
@@ -3716,7 +3716,7 @@ msgstr "Temporaire"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3725,7 +3725,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "Le meilleur endroit pour poser des questions sur Beremiz / PLCOpenEditor\n"
-"est la liste de diffusion du projet: beremiz-devel@lists.sourceforge.net\n"
+"est la liste de diffusion du projet: https://openplc.discussion.community\n"
 "\n"
 "C'est le principal canal de soutien communautaire.\n"
 "Pour poster, il est nécessaire d'être abonné à la liste de diffusion.\n"
