--- a/editor/i18n/Beremiz_hu_HU.po
+++ b/editor/i18n/Beremiz_hu_HU.po
@@ -30,7 +30,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -41,7 +41,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Kérem legyen szíves ezt a fájlt elküldeni erre a címre:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "A programot újra kell indítania.\n"
 "\n"
@@ -3678,7 +3678,7 @@ msgstr "Ideiglenes"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3687,7 +3687,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "A legjobb hely a kérdések feltevésére a Beremiz/PLCOpenEditor kapcsán\n"
-"a projekt levelezési listája: beremiz-devel@lists.sourceforge.net\n"
+"a projekt levelezési listája: https://openplc.discussion.community\n"
 "\n"
 "Ez a fő támogatási csatorna.\n"
 "Az üzenet küldéshez szükséges a regisztráció a levelező listára.\n"
