--- a/editor/i18n/Beremiz_ko_KR.po
+++ b/editor/i18n/Beremiz_ko_KR.po
@@ -30,7 +30,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -41,7 +41,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "해당 파일을 다음과 같은 주소로 보내주시면 감사하겠습니다:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "프로그램을 재시작해야 합니다. \n"
 "\n"
@@ -3684,7 +3684,7 @@ msgstr "임시"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3692,7 +3692,7 @@ msgid ""
 "You can subscribe to the list here:\n"
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
-"Beremiz 및 PLCOpenEditor에 관한 질문들을 남길 수 있는 제일 좋은 장소는 프로젝트 메일링 리스트입니다: beremiz-devel@lists.sourceforge.net\n"
+"Beremiz 및 PLCOpenEditor에 관한 질문들을 남길 수 있는 제일 좋은 장소는 프로젝트 메일링 리스트입니다: https://openplc.discussion.community\n"
 "\n"
 "이곳은 메인 커뮤니티 지원 채널입니다. \n"
 "글을 남기기 위해서는 메일링 리스트를 구독해야 합니다.\n"
