--- a/editor/i18n/Beremiz_pt_BR.po
+++ b/editor/i18n/Beremiz_pt_BR.po
@@ -30,7 +30,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -41,7 +41,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Favor enviar este relatório de erro para:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Você deve reiniciar este programa.\n"
 "\n"
@@ -3686,7 +3686,7 @@ msgstr "Temporário"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3695,7 +3695,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "O melhor lugar para enviar perguntas sobre o Beremiz/PLCOpen Editor\n"
-"é a lista de e=mails do projeto: beremiz-devel@lists.sourceforge.net\n"
+"é a lista de e=mails do projeto: https://openplc.discussion.community\n"
 "\n"
 "Este é o canal de suporte principal da comunidade.\n"
 "Para enviar é necessário estar inscrito na lista de e-mail.\n"
