--- a/editor/i18n/Beremiz_ru_RU.po
+++ b/editor/i18n/Beremiz_ru_RU.po
@@ -31,7 +31,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -42,7 +42,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Будьте добры, отправьте этот файл по адресу\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Для дальнейшей работы перезапустите программу.\n"
 "\n"
@@ -3717,7 +3717,7 @@ msgstr "Временный"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3728,7 +3728,7 @@ msgstr ""
 "Самым правильным местом для вопросов\n"
 "о Beremiz/PLCOpenEditor\n"
 "является список рассылки проекта:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Это основной канал общения сообщества.\n"
 "Для написания сообщений туда необходимо быть подписанным на список рассылки.\n"
