--- a/editor/i18n/Beremiz_sl_SI.po
+++ b/editor/i18n/Beremiz_sl_SI.po
@@ -31,7 +31,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -42,7 +42,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Prosim pošljite to datoteko na naslov :\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Potrebno je na novo zagnati program.\n"
 "\n"
@@ -3695,7 +3695,7 @@ msgstr "Začasno"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3704,7 +3704,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "Vsa vprašanja o Beremiz/PLCOpenEditor projektu lahko postavite\n"
-"v projektni poštni seznam: beremiz-devel@lists.sourceforge.net\n"
+"v projektni poštni seznam: https://openplc.discussion.community\n"
 "\n"
 "To je glavni podporni kanal skupnosti.\n"
 "Potrebna je prijava na poštni seznam pred objavo vprašanja.\n"
