--- a/editor/i18n/Beremiz_tr_TR.po
+++ b/editor/i18n/Beremiz_tr_TR.po
@@ -29,7 +29,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -39,7 +39,7 @@ msgstr ""
 "Beklenmeyen özel bir durum(hata) oluştu. Hata raporu kaydedildi:\n"
 "(%s)\n"
 "Bu raporu bize göndererek düzeltmemize yardımcı olun.\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Çalışmaya devam etmek için programı yeniden başlatmanız gerekmektedir.\n"
 "\n"
@@ -3711,7 +3711,7 @@ msgstr "Sıcaklık"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3720,7 +3720,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "Beremiz / PLCOpenEditor hakkında soru sormak için en iyi yer\n"
-"projenin posta listesi: beremiz-devel@lists.sourceforge.net\n"
+"projenin posta listesi: https://openplc.discussion.community\n"
 "\n"
 "Bu ana topluluk destek kanalı.\n"
 "Göndermek için posta listesine üye olmanız gerekmektedir.\n"
