--- a/editor/i18n/Beremiz_vi_VN.po
+++ b/editor/i18n/Beremiz_vi_VN.po
@@ -29,7 +29,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -40,7 +40,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Vui lòng gửi báo cáo này đến:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Bạn nên khởi động lại chương trình.\n"
 "\n"
@@ -3676,7 +3676,7 @@ msgstr "Tạm thời"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3685,7 +3685,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "Nơi tốt nhất để giải đáp các thắc mắc của bạn về Beremiz/PLCOpenEditor\n"
-"là qua danh sách mail: beremiz-devel@lists.sourceforge.net\n"
+"là qua danh sách mail: https://openplc.discussion.community\n"
 "\n"
 "Đây là kênh hỗ trợ cộng đồng chính thức.\n"
 "Để dăng tin bạn cần đăng kí vào danh sách trên.\n"
