--- a/editor/i18n/Beremiz_zh_CN.po
+++ b/editor/i18n/Beremiz_zh_CN.po
@@ -34,7 +34,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -45,7 +45,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "请好心地把这个文件发送到：\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "您现在应该重新启动程序.\n"
 "\n"
@@ -3683,7 +3683,7 @@ msgstr "缓冲"
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
@@ -3692,7 +3692,7 @@ msgid ""
 "https://lists.sourceforge.net/lists/listinfo/beremiz-devel"
 msgstr ""
 "关于Beremiz/PLCOpenEditor的最佳问问题点\n"
-"是项目的邮件列表： beremiz-devel@lists.sourceforge.net\n"
+"是项目的邮件列表： https://openplc.discussion.community\n"
 "\n"
 "这主要是社区支持渠道。\n"
 "发布必须订阅邮件列表。\n"
