--- a/editor/i18n/Beremiz_pl.po
+++ b/editor/i18n/Beremiz_pl.po
@@ -29,7 +29,7 @@ msgid ""
 "(%s)\n"
 "\n"
 "Please be kind enough to send this file to:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "You should now restart program.\n"
 "\n"
@@ -40,7 +40,7 @@ msgstr ""
 "(%s)\n"
 "\n"
 "Proszę o przesłanie go na adres:\n"
-"beremiz-devel@lists.sourceforge.net\n"
+"https://openplc.discussion.community\n"
 "\n"
 "Zaleca się zrestartowanie programu.\n"
 "\n"
@@ -3654,7 +3654,7 @@ msgstr ""
 #: ../version.py:37
 msgid ""
 "The best place to ask questions about Beremiz/PLCOpenEditor\n"
-"is project's mailing list: beremiz-devel@lists.sourceforge.net\n"
+"is project's mailing list: https://openplc.discussion.community\n"
 "\n"
 "This is the main community support channel.\n"
 "For posting it is required to be subscribed to the mailing list.\n"
